<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Debt/Loan Tracker</string>
    <string name="title_section_list">List</string>
    <string name="title_section_history">History</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_person_detail">Detail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="owes_you">Owes you</string>
    <string name="you_owe">You owe</string>
    <string name="num_unpayed">Num Unpaid Items:</string>

    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="show_paid">Show Paid</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_add_debt">Add Debt</string>
    <string name="action_add_loan">Add Loan</string>
    <string name="action_sort_by">Sort By</string>
    <string name="options">Options</string>

    <string name="pref_cat_person_list">Person List</string>
    <string name="pref_cat_person_detail">Person Detail</string>

    <string name="pref_title_show_paid">Show Paid Items</string>
    <string name="pref_summary_show_paid">Toggle to show/hide paid items</string>

    <string name="pref_title_history_show_num">History List Limit</string>
    <string name="pref_summary_history_show_num">&#160;item limit</string>

    <string name="pref_title_show_zero_balance">Show Zero Balance</string>
    <string name="pref_summary_show_zero_balance">Show people who have a net balance of $0.00</string>

    <string name="pref_summary_sort_by">Select sort order</string>

    <string name="pref_key_person_list_sort_by">person_list_sort_by</string>
    <string name="pref_key_item_list_sort_by">item_list_sort_by</string>
    <string name="pref_key_item_list_show_paid">item_list_show_paid</string>
    <string name="pref_key_history_show_items_num">history_show_items_num</string>
    <string name="pref_key_person_list_show_zero">person_list_show_zero</string>

    <string name="pref_person_list_sort_by_default">ABS(net_balance) DESC</string>
    <string name="pref_item_list_sort_by_default">created_at DESC</string>

    <string name="history_description_you_paid">You paid&#160;</string>
    <string name="history_description_you_loaned">You loaned&#160;</string>
    <string name="history_description_loaned_you">&#160;loaned you&#160;</string>
    <string name="history_description_paid_you">&#160;paid you&#160;</string>
    <string name="history_description_for">&#160;for&#160;</string>

    <string name="are_you_sure">Are You Sure?</string>
    <string name="delete_item_message">Deleting an item from the database is permanent and cannot be undone. Continue?</string>
    <string name="delete_person_message">Deleting a person is permanent and will completely remove them from the database. Continue?</string>
    <string name="clear_items_message">This action will set all unpaid items to paid for this person, clearing their balance to $0.00. Continue?</string>
</resources>
