<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_cat_person_list">

        <ListPreference
            android:key="@string/pref_key_person_list_sort_by"
            android:title="@string/action_sort_by"
            android:dialogTitle="@string/action_sort_by"
            android:entries="@array/person_list_sort_by"
            android:entryValues="@array/person_list_sort_by_vals"
            android:defaultValue="@string/pref_person_list_sort_by_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_person_detail">

        <ListPreference
            android:key="@string/pref_key_item_list_sort_by"
            android:title="@string/action_sort_by"
            android:dialogTitle="@string/action_sort_by"
            android:entries="@array/item_list_sort_by"
            android:entryValues="@array/item_list_sort_by_vals"
            android:defaultValue="@string/pref_item_list_sort_by_default" />

        <CheckBoxPreference
            android:key="@string/pref_key_item_list_show_paid"
            android:title="@string/pref_title_show_paid"
            android:summary="@string/pref_summary_show_paid" />

    </PreferenceCategory>

</PreferenceScreen>